syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/mhthrh/common_pkg/xError/grpc/v1";

message Error{
  string Code = 1;
  string ErrorType = 2;
  string Message = 3;
  string Detail = 4;
  int64  HttpStatus = 5;
  int64  GrpcStatus = 6;
  string InternalError = 7;
  google.protobuf.Timestamp Time = 8;
}